# readex-rrl

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: Config.cmake.in
include/cal/: cal_base_nn.hpp  cal_collect_all.hpp  cal_collect_fix.hpp  cal_collect_scaling.hpp  cal_collect_scaling_ref.hpp  cal_counter.proto  cal_dummy.hpp  cal_neural_net.hpp  cal_qlearn.hpp  calibration.hpp  q_learning_v2.hpp  tensorflow_model.hpp
include/rrl/: control_center.hpp  filter.hpp  metric_manager.hpp  oa_event_receiver.hpp  parameter_controller.hpp  pcp_handler.hpp  rts_handler.hpp  user_parameters.h  user_parameters.inc
include/rrl/call_tree/: add_id_node.hpp  base_node.hpp  region_node.hpp  value_node.hpp
include/rrl/cm/: cm_base.hpp  cm_no_reset.hpp  cm_reset.hpp
include/scorep/: rrl_tuning_plugins.h  scorep.hpp
include/tmm/: callpath.hpp  dta_tmm.hpp  identifiers.hpp  json_serilisation.hpp  parameter_tuple.hpp  rat_tmm.hpp  region.hpp  simple_callpath.hpp  tuning_model.hpp  tuning_model_manager.hpp
include/util/: common.hpp  config.hpp  environment.hpp  exception.hpp  log.hpp
include/visualization/: scorep_substrate_rrl.hpp
src/cal/: cal_collect_all.cpp  cal_collect_fix.cpp  cal_collect_scaling.cpp  cal_collect_scaling_ref.cpp  cal_dummy.cpp  cal_neural_net.cpp  cal_qlearn.cpp  calibration.cpp  q_learning_v2.cpp  tensorflow_model.cpp
src/rrl/: control_center.cpp  filter.cpp  metric_manager.cpp  oa_event_receiver.cpp  parameter_controller.cpp  pcp_handler.cpp  rts_handler.cpp  user_parameters.cpp  user_parametersF.cpp
src/rrl/call_tree/: add_id_node.cpp  base_node.cpp  region_node.cpp  value_node.cpp
src/rrl/cm/: cm_base.cpp  cm_no_reset.cpp  cm_reset.cpp
src/scorep/: scorep.cpp
src/tmm/: dta_tmm.cpp  identifiers.cpp  rat_tmm.cpp  tuning_model.cpp  tuning_model_manager.cpp
src/visualization/: scorep_substrate_rrl.cpp
tests/: CMakeLists.txt  test-registry.cpp  test-registry.hpp  test-runner.cpp
tests/unit_tests/tmm/: test-deserialization.cpp  test-deserialization.json  test-dta_tmm.cpp  test-rat_tmm.cpp  test-rat_tmm.json
tmviewer/: CMakeLists.txt
tmviewer/src/: main.cpp
